[tool.poetry]
name = "learn-python"
version = "0.1.0"
description = ""
authors = ["Ajay Mishra <ajay.mishra.@xperi.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ajmishra-tivo/learn-python"
repository = "https://github.com/ajmishra-tivo/learn-python"
keywords = ["learn-python"]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.0"
requests = "^2.32.3"

[tool.poetry.scripts]
learn-python = "learn_python.client:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
